XP-1586 Detail Panel - Prevent action buttons from positioning behind info panel

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/details/details.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/details/details.less
@@ -147,6 +147,8 @@
     }
 
     .widget-selector {
+
+      max-width: none;
       width: calc(~'100% - 47px');
 
       input {
